# isofinancial-mcp

./: CHANGELOG.md  PUBLISH_GUIDE.md  PYPI_READY_SUMMARY.md  pyproject.toml  server.py
datasources/: __init__.py
iso_financial_mcp/datasources/: finra_source.py  trends_source_manager.py
